App is writing to xlsx but not to database and the values are missing

--- a/flaskblog/templates/about.html
+++ b/flaskblog/templates/about.html
@@ -2,4 +2,8 @@
 {% block content %}
     <h1>About Page</h1>
 <p>Created by Darren Gregory for Sport It First</p>
+<! -- add contact email darren@sportitfirst.co.uk -->
+any issues or questions please email Darren at <a href="mailto:darren@sportitfirst.co.uk">darren@sportitfirst.co.uk</a>
+
+
 {% endblock content %}
