--- a/flaskblog/templates/entry.html
+++ b/flaskblog/templates/entry.html
@@ -40,7 +40,7 @@
     <br/>
     {{ form.Depth.label}} {{form.Depth}}
     <br/>
-    {{ form.Purchase_Ord.label}} {{form.Purchase_Ord}}
+    {{ form.PurchaseOrder.label}} {{form.PurchaseOrder}}
     <br/>
     {{ form.Label.label}}{{form.Label}}
     <br/>
