All footwear templates both adults and kids are populating properly. Routes on the site are now correctly configured
TODO: Need to create a function where the user clicks "Complete" and that concats all the files in the folder which will be named USER_DATE_ORDERNUMBER

--- a/flaskblog/templates/adults.html
+++ b/flaskblog/templates/adults.html
@@ -1,6 +1,31 @@
 {% extends "layout.html" %}
 {% block content %}
+    {% for post in posts %}
 
+    <!-- Create two yellow buttons with black text in the center of the page -->
+    <h1>Please choose type of garment</h1>
+    <div class="row">
+        <div class="col-md-6">
+            <a href="/adults-footwear" class="btn btn-warning btn-lg btn-block">Footwear</a>
+        </div>
+        <div class="col-md-6">
+            <a href="/adults_clothing" class="btn btn-warning btn-lg btn-block">Clothing</a>
 
-    {% endfor %}
+        </div>
+
+        {% endfor %}
 {% endblock content %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
