Finalised function working. Need to copy this to the other pages and add clothing pages

--- a/flaskblog/templates/Kids_Footwear.html
+++ b/flaskblog/templates/Kids_Footwear.html
@@ -63,26 +63,21 @@
     <br/>
     {{ form.Sizes.label}} {{form.Sizes}}
     <br/>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <br/>
     <br/>
 
     {{form.submit}}
-            <br/>
-    {{form.Finsh}}
+    <br/>
+    <br/>
+        <br/>
+    <br/>
+    <br/>
+   {{ form.Finalise.label}} {{ form.Finalise }}
+
+
+
+
+
 
 
 
