Finalised function working. Need to copy this to the other pages and add clothing pages

--- a/flaskblog/templates/Adults_Footwear.html
+++ b/flaskblog/templates/Adults_Footwear.html
@@ -59,33 +59,19 @@
     <br/>
     {{ form.Label.label}}   <br/>    {{form.Label}}
     <br/>
+    {{form.Adults}}
+    <br/>
     {{ form.Sizes.label}} {{form.Sizes}}
     <br/>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <br/>
     <br/>
 
     {{form.submit}}
-
     <br/>
-    {{form.Finish}}
-    </div>
-</form>
-
-
-
+    <br/>
+        <br/>
+    <br/>
+    <br/>
+   {{ form.Finalise.label}} {{ form.Finalise }}
 
 {% endblock content %}
