Finalised function working. Need to copy this to the other pages and add clothing pages All input pages setup

--- a/flaskblog/templates/Kids_Clothing.html
+++ b/flaskblog/templates/Kids_Clothing.html
@@ -2,7 +2,7 @@
 {% block content %}
 <h1>Sif Data Entry</h1>
 
-<<!-- create a form to enter data and post that data to Entry -->
+<!-- create a form to enter data and post that data to Entry -->
 
 
 <form method="POST" action="" enctype="multipart/form-data">
@@ -59,7 +59,7 @@
     <br/>
     {{ form.Label.label}}   <br/>    {{form.Label}}
     <br/>
-    {{form.Adults}}
+    {{form.Kids}}
     <br/>
     {{ form.Sizes.label}} {{form.Sizes}}
     <br/>
