--- a/flaskblog/templates/Adults_Clothing.html
+++ b/flaskblog/templates/Adults_Clothing.html
@@ -2,7 +2,7 @@
 {% block content %}
 <h1>Sif Data Entry</h1>
 
-<<!-- create a form to enter data and post that data to Entry -->
+<!-- create a form to enter data and post that data to Entry -->
 
 
 <form method="POST" action="" enctype="multipart/form-data">
