--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -11,6 +11,11 @@
         <div class="col-md-6">
             <a href="/adults" class="btn btn-warning btn-lg btn-block">Adults</a>
 
+                    </div>
+        <div class="col-md-6">
+            <a href="/Accessories" class="btn btn-warning btn-lg btn-block">Acessories</a>
+
+
 
 
         </div>
