--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -15,9 +15,28 @@
     {% else %}
         <title>Sport It First</title>
     {% endif %}
+
 </head>
+
 <body>
     <header class="site-header">
+      <!--place logo in center of the page-->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <nav class="navbar navbar-expand-lg navbar-light">
+              <a class="navbar-brand" href="/"><img src="https://cdn.shopify.com/s/files/1/0524/2470/4199/files/SIF_logo_319ce495-02e7-40d2-b32b-6cd3b529721f_136x.png?v=1637672224" alt="logo" width="100" height="100"></a>
+
+                  </li>
+                </ul>
+              </div>
+            </nav>
+          </div>
+        </div>
+      <link rel = "icon" href = 
+      "https://cdn.shopify.com/s/files/1/0524/2470/4199/files/SIF_logo_319ce495-02e7-40d2-b32b-6cd3b529721f_136x.png?v=1637672224 
+      
+              type = "image/x-icon">
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
           <a class="navbar-brand mr-4" href="/">Sport It First</a>
