--- a/flaskblog/templates/about.html
+++ b/flaskblog/templates/about.html
@@ -1,9 +1,14 @@
 {% extends "layout.html" %}
 {% block content %}
+<div class="container">
+
+
     <h1>About Page</h1>
 <p>Created by Darren Gregory for Sport It First</p>
 <! -- add contact email darren@sportitfirst.co.uk -->
 any issues or questions please email Darren at <a href="mailto:darren@sportitfirst.co.uk">darren@sportitfirst.co.uk</a>
+</div>
+
 
 
 {% endblock content %}
