Homaepage changes based on if user is logged in

--- a/flaskblog/templates/about.html
+++ b/flaskblog/templates/about.html
@@ -1,13 +1,11 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="container">
-
-
     <h1>About Page</h1>
 <p>Created by Darren Gregory for Sport It First</p>
-<! -- add contact email darren@sportitfirst.co.uk -->
-any issues or questions please email Darren at <a href="mailto:darren@sportitfirst.co.uk">darren@sportitfirst.co.uk</a>
-</div>
+
+Any issues or questions or suggestions  please email Darren at: 
+    <a href="mailto:darren@sportitfirst.co.uk">darren@sportitfirst.co.uk</a>
+
 
 
 
